Restructure test fixtures and added tests for full cf

--- a/src/omg-cli/templates/assets/tiles/ert/product.yml
+++ b/src/omg-cli/templates/assets/tiles/ert/product.yml
@@ -379,3 +379,34 @@ resource-config:
     instance_type:
       id: ((uaa_instance_type))
     instances: ((uaa_instances))
+errand-config:
+  deploy-autoscaler:
+    post-deploy-state: ((deploy-autoscaler_post_deploy_state))
+    pre-delete-state: ((deploy-autoscaler_pre_delete_state))
+  deploy-notifications:
+    post-deploy-state: ((deploy-notifications_post_deploy_state))
+    pre-delete-state: ((deploy-notifications_pre_delete_state))
+  deploy-notifications-ui:
+    post-deploy-state: ((deploy-notifications-ui_post_deploy_state))
+    pre-delete-state: ((deploy-notifications-ui_pre_delete_state))
+  metric_registrar_smoke_test:
+    post-deploy-state: ((metric_registrar_smoke_test_post_deploy_state))
+    pre-delete-state: ((metric_registrar_smoke_test_pre_delete_state))
+  nfsbrokerpush:
+    post-deploy-state: ((nfsbrokerpush_post_deploy_state))
+    pre-delete-state: ((nfsbrokerpush_pre_delete_state))
+  push-apps-manager:
+    post-deploy-state: ((push-apps-manager_post_deploy_state))
+    pre-delete-state: ((push-apps-manager_pre_delete_state))
+  push-usage-service:
+    post-deploy-state: ((push-usage-service_post_deploy_state))
+    pre-delete-state: ((push-usage-service_pre_delete_state))
+  smbbrokerpush:
+    post-deploy-state: ((smbbrokerpush_post_deploy_state))
+    pre-delete-state: ((smbbrokerpush_pre_delete_state))
+  smoke_tests:
+    post-deploy-state: ((smoke_tests_post_deploy_state))
+    pre-delete-state: ((smoke_tests_pre_delete_state))
+  test-autoscaling:
+    post-deploy-state: ((test-autoscaling_post_deploy_state))
+    pre-delete-state: ((test-autoscaling_pre_delete_state))
