--- a/src/omg-cli/templates/assets/options/full.yml
+++ b/src/omg-cli/templates/assets/options/full.yml
@@ -61,6 +61,8 @@
       router_elb_names: [tcp:((wss_router_pool)), http:((http_lb_backend_name))]
       tcp_router_elb_names: [tcp:((tcp_router_pool))]
       tcp_routing/enable/reservable_ports: ((tcp_port_range))
+      gorouter_ssl_ciphers: ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
+      haproxy_ssl_ciphers: DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
       system_database/external/host: ((sql_db_ip))
       system_database/external/port: ((sql_db_port))
       system_database/external/account_password: ((ert_sql_password))
