fix test for 2xlarge.cpu

--- a/src/omg-cli/templates/fixtures/cf/small.yml
+++ b/src/omg-cli/templates/fixtures/cf/small.yml
@@ -324,7 +324,7 @@ resource-config:
   control:
     instances: automatic
     instance_type:
-      id: 2xlarge.disk
+      id: 2xlarge.cpu
     elb_names:
     - tcp:test-ssh-pool-name
   database:
