--- a/src/omg-cli/templates/assets/options/full.yml
+++ b/src/omg-cli/templates/assets/options/full.yml
@@ -21,10 +21,6 @@
     ops_files:
     - tiles/ert/network/3-az-configuration.yml
     - tiles/ert/features/system_blobstore-external_gcs_service_account.yml
-    # TODO: credhub external database does not work in 2.4
-    # - tiles/ert/features/system_database-external.yml
-    # - tiles/ert/features/uaa_database-external.yml
-    # - tiles/ert/features/credhub_database-external.yml
     - tiles/ert/features/haproxy_forward_tls-disable.yml
     - tiles/ert/features/tcp_routing-enable.yml
     - tiles/ert/resource/diego_brain_elb_names.yml
@@ -52,6 +48,7 @@
       uaa/service_provider_key_credentials/certificate: ((ssl_cert))
       uaa/service_provider_key_credentials/privatekey: ((ssl_cert_private_key))
       security_acknowledgement: X
+      stack_migration_acknowledgement: x
       mysql_monitor/recipient_email: admin@example.org
       system_blobstore/external_gcs_service_account/project_id: ((blobstore_service_account_project))
       system_blobstore/external_gcs_service_account/service_account_email: ((blobstore_service_account_email))
@@ -66,40 +63,6 @@
       tcp_routing/enable/reservable_ports: ((tcp_port_range))
       gorouter_ssl_ciphers: ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
       haproxy_ssl_ciphers: DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
-      # TODO: credhub external database does not work in 2.4
-      # system_database/external/host: ((sql_db_ip))
-      # system_database/external/port: ((sql_db_port))
-      # system_database/external/account_password: ((ert_sql_password))
-      # system_database/external/account_username: ((ert_sql_username))
-      # system_database/external/app_usage_service_password: ((ert_sql_password))
-      # system_database/external/app_usage_service_username: ((ert_sql_username))
-      # system_database/external/autoscale_password: ((ert_sql_password))
-      # system_database/external/autoscale_username: ((ert_sql_username))
-      # system_database/external/ccdb_password: ((ert_sql_password))
-      # system_database/external/ccdb_username: ((ert_sql_username))
-      # system_database/external/diego_password: ((ert_sql_password))
-      # system_database/external/diego_username: ((ert_sql_username))
-      # system_database/external/locket_password: ((ert_sql_password))
-      # system_database/external/locket_username: ((ert_sql_username))
-      # system_database/external/networkpolicyserver_password: ((ert_sql_password))
-      # system_database/external/networkpolicyserver_username: ((ert_sql_username))
-      # system_database/external/nfsvolume_password: ((ert_sql_password))
-      # system_database/external/nfsvolume_username: ((ert_sql_username))
-      # system_database/external/notifications_password: ((ert_sql_password))
-      # system_database/external/notifications_username: ((ert_sql_username))
-      # system_database/external/routing_password: ((ert_sql_password))
-      # system_database/external/routing_username: ((ert_sql_username))
-      # system_database/external/silk_password: ((ert_sql_password))
-      # system_database/external/silk_username: ((ert_sql_username))
-      # uaa_database/external/host: ((sql_db_ip))
-      # uaa_database/external/port: ((sql_db_port))
-      # uaa_database/external/uaa_password: ((ert_sql_password))
-      # uaa_database/external/uaa_username: ((ert_sql_username))
-      # credhub_database/external/host: ((sql_db_ip))
-      # credhub_database/external/port: ((sql_db_port))
-      # credhub_database/external/username: ert_sql_username
-      # credhub_database/external/password: ert_sql_password
-      # credhub_database/external/tls_ca: nil
 
 # GCP-SERVICE-BROKER
 - type: replace
