fix fixtures for the removing of the external database

--- a/src/omg-cli/templates/fixtures/cf/full.yml
+++ b/src/omg-cli/templates/fixtures/cf/full.yml
@@ -68,8 +68,6 @@ product-properties:
     value: sys.example.com
   .diego_brain.starting_container_count_maximum:
     value: 200
-  .doppler.message_drain_buffer_size:
-    value: 10000
   .ha_proxy.skip_cert_verify:
     value: true
   .mysql.cli_history:
@@ -96,6 +94,8 @@ product-properties:
     value: false
   .properties.autoscale_api_instance_count:
     value: 1
+  .properties.autoscale_enable_notifications:
+    value: true
   .properties.autoscale_enable_verbose_logging:
     value: false
   .properties.autoscale_instance_count:
@@ -116,16 +116,18 @@ product-properties:
     value: false
   .properties.cf_networking_internal_domain:
     value: apps.internal
+  .properties.cloud_controller_completed_tasks_cutoff_age_in_days:
+    value: 31
   .properties.cloud_controller_default_health_check_timeout:
     value: 60
-  .properties.cloud_controller_default_stack:
-    value: default
   .properties.cloud_controller_temporary_disable_deployments:
     value: false
   .properties.container_networking_interface_plugin:
     value: silk
   .properties.container_networking_interface_plugin.silk.enable_log_traffic:
     value: false
+  .properties.container_networking_interface_plugin.silk.enable_policy_enforcement:
+    value: true
   .properties.container_networking_interface_plugin.silk.iptables_accepted_udp_logs_per_sec:
     value: 100
   .properties.container_networking_interface_plugin.silk.iptables_denied_logs_per_sec:
@@ -147,8 +149,6 @@ product-properties:
     value: 100
   .properties.diego_log_timestamp_format:
     value: rfc3339
-  .properties.enable_cf_metric_name:
-    value: false
   .properties.enable_smb_volume_driver:
     value: false
   .properties.enable_tls_to_internal_pxc:
@@ -169,8 +169,12 @@ product-properties:
     value: 16384
   .properties.haproxy_ssl_ciphers:
     value: DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
+  .properties.istio:
+    value: disable
   .properties.locket_database_max_open_connections:
     value: 200
+  .properties.log_cache_max_per_source:
+    value: 100000
   .properties.metric_registrar_blacklisted_tags:
     value: deployment,job,index,id
   .properties.metric_registrar_enabled:
@@ -205,7 +209,7 @@ product-properties:
     value:
     - href: /marketplace
       name: Marketplace
-    - href: https://docs.pivotal.io/pivotalcf/2-4/pas/intro.html
+    - href: https://docs.pivotal.io/pivotalcf/2-5/pas/intro.html
       name: Docs
     - href: /tools
       name: Tools
@@ -216,6 +220,8 @@ product-properties:
   .properties.route_services:
     value: enable
   .properties.route_services.enable.ignore_ssl_cert_verification:
+    value: false
+  .properties.route_services.enable.internal_lookup:
     value: false
   .properties.router_backend_max_conn:
     value: 500
@@ -247,6 +253,8 @@ product-properties:
     value: plain
   .properties.smtp_enable_starttls_auto:
     value: false
+  .properties.stack_migration_acknowledgement:
+    value: x
   .properties.syslog_drop_debug:
     value: true
   .properties.syslog_metrics_to_syslog_enabled:
@@ -323,8 +331,6 @@ product-properties:
     value: 900
   .uaa.apps_manager_access_token_lifetime:
     value: 3600
-  .uaa.apps_manager_refresh_token_lifetime:
-    value: 3600
   .uaa.cf_cli_access_token_lifetime:
     value: 7200
   .uaa.cf_cli_refresh_token_lifetime:
@@ -344,6 +350,8 @@ resource-config:
     instance_type:
       id: automatic
     instances: automatic
+    persistent_disk:
+      size_mb: automatic
   clock_global:
     instance_type:
       id: automatic
@@ -382,6 +390,14 @@ resource-config:
     instance_type:
       id: automatic
     instances: automatic
+  istio_control:
+    instance_type:
+      id: automatic
+    instances: automatic
+  istio_router:
+    instance_type:
+      id: automatic
+    instances: automatic
   loggregator_trafficcontroller:
     instance_type:
       id: automatic
@@ -410,6 +426,10 @@ resource-config:
     instances: automatic
     persistent_disk:
       size_mb: automatic
+  route_syncer:
+    instance_type:
+      id: automatic
+    instances: automatic
   router:
     elb_names:
     - tcp:test-wss-pool-name
