--- a/src/omg-cli/templates/fixtures/cf/small.yml
+++ b/src/omg-cli/templates/fixtures/cf/small.yml
@@ -1,3 +1,41 @@
+errand-config:
+  deploy-autoscaler:
+    post-deploy-state: default
+    pre-delete-state: default
+  deploy-notifications:
+    post-deploy-state: default
+    pre-delete-state: default
+  deploy-notifications-ui:
+    post-deploy-state: default
+    pre-delete-state: default
+  metric_registrar_smoke_test:
+    post-deploy-state: default
+    pre-delete-state: default
+  nfsbrokerpush:
+    post-deploy-state: default
+    pre-delete-state: default
+  push-apps-manager:
+    post-deploy-state: default
+    pre-delete-state: default
+  push-usage-service:
+    post-deploy-state: default
+    pre-delete-state: default
+  smbbrokerpush:
+    post-deploy-state: default
+    pre-delete-state: default
+  smoke_tests:
+    post-deploy-state: default
+    pre-delete-state: default
+  test-autoscaling:
+    post-deploy-state: default
+    pre-delete-state: default
+network-properties:
+  network:
+    name: test-ert-subnet
+  other_availability_zones:
+  - name: testzone-1
+  singleton_availability_zone:
+    name: testzone-1
 product-name: cf
 product-properties:
   .cloud_controller.allow_app_ssh_access:
@@ -28,8 +66,6 @@ product-properties:
     value: sys.example.com
   .diego_brain.starting_container_count_maximum:
     value: 200
-  .doppler.message_drain_buffer_size:
-    value: 10000
   .ha_proxy.skip_cert_verify:
     value: true
   .mysql.cli_history:
@@ -56,6 +92,8 @@ product-properties:
     value: false
   .properties.autoscale_api_instance_count:
     value: 1
+  .properties.autoscale_enable_notifications:
+    value: true
   .properties.autoscale_enable_verbose_logging:
     value: false
   .properties.autoscale_instance_count:
@@ -76,16 +114,18 @@ product-properties:
     value: false
   .properties.cf_networking_internal_domain:
     value: apps.internal
+  .properties.cloud_controller_completed_tasks_cutoff_age_in_days:
+    value: 31
   .properties.cloud_controller_default_health_check_timeout:
     value: 60
-  .properties.cloud_controller_default_stack:
-    value: default
   .properties.cloud_controller_temporary_disable_deployments:
     value: false
   .properties.container_networking_interface_plugin:
     value: silk
   .properties.container_networking_interface_plugin.silk.enable_log_traffic:
     value: false
+  .properties.container_networking_interface_plugin.silk.enable_policy_enforcement:
+    value: true
   .properties.container_networking_interface_plugin.silk.iptables_accepted_udp_logs_per_sec:
     value: 100
   .properties.container_networking_interface_plugin.silk.iptables_denied_logs_per_sec:
@@ -98,17 +138,15 @@ product-properties:
     value: internal_mysql
   .properties.credhub_key_encryption_passwords:
     value:
-    - name: test-credhub-key-name
+    - key:
+        secret: test-credhub-key
+      name: test-credhub-key-name
       primary: true
       provider: internal
-      key:
-        secret: test-credhub-key
   .properties.diego_database_max_open_connections:
     value: 100
   .properties.diego_log_timestamp_format:
     value: rfc3339
-  .properties.enable_cf_metric_name:
-    value: false
   .properties.enable_smb_volume_driver:
     value: false
   .properties.enable_tls_to_internal_pxc:
@@ -129,8 +167,12 @@ product-properties:
     value: 16384
   .properties.haproxy_ssl_ciphers:
     value: DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384
+  .properties.istio:
+    value: disable
   .properties.locket_database_max_open_connections:
     value: 200
+  .properties.log_cache_max_per_source:
+    value: 100000
   .properties.metric_registrar_blacklisted_tags:
     value: deployment,job,index,id
   .properties.metric_registrar_enabled:
@@ -143,10 +185,10 @@ product-properties:
     value: connect,query
   .properties.networking_poe_ssl_certs:
     value:
-    - name: Certificate
-      certificate:
+    - certificate:
         cert_pem: test-ssl-cert
         private_key_pem: test-ssl-key
+      name: Certificate
   .properties.networkpolicyserver_database_max_open_connections:
     value: 200
   .properties.networkpolicyserverinternal_database_max_open_connections:
@@ -165,7 +207,7 @@ product-properties:
     value:
     - href: /marketplace
       name: Marketplace
-    - href: https://docs.pivotal.io/pivotalcf/2-4/pas/intro.html
+    - href: https://docs.pivotal.io/pivotalcf/2-5/pas/intro.html
       name: Docs
     - href: /tools
       name: Tools
@@ -176,6 +218,8 @@ product-properties:
   .properties.route_services:
     value: enable
   .properties.route_services.enable.ignore_ssl_cert_verification:
+    value: false
+  .properties.route_services.enable.internal_lookup:
     value: false
   .properties.router_backend_max_conn:
     value: 500
@@ -207,6 +251,8 @@ product-properties:
     value: plain
   .properties.smtp_enable_starttls_auto:
     value: false
+  .properties.stack_migration_acknowledgement:
+    value: x
   .properties.syslog_drop_debug:
     value: true
   .properties.syslog_metrics_to_syslog_enabled:
@@ -223,16 +269,16 @@ product-properties:
     value: test-droplets-bucket
   .properties.system_blobstore.external_gcs_service_account.packages_bucket:
     value: test-packges-bucket
-  .properties.system_blobstore.external_gcs_service_account.resources_bucket:
-    value: test-resources-bucket
   .properties.system_blobstore.external_gcs_service_account.project_id:
     value: test-blobstore-project
+  .properties.system_blobstore.external_gcs_service_account.resources_bucket:
+    value: test-resources-bucket
   .properties.system_blobstore.external_gcs_service_account.service_account_email:
     value: blobstore@example.com
   .properties.system_blobstore.external_gcs_service_account.service_account_json_key:
     value:
-      type: service_account
       project_id: test-blobstore-project
+      type: service_account
   .properties.system_blobstore_ccdroplet_max_staged_droplets_stored:
     value: 2
   .properties.system_blobstore_ccpackage_max_valid_packages_stored:
@@ -281,13 +327,7 @@ product-properties:
     value: 20
   .router.request_timeout_in_seconds:
     value: 900
-  .uaa.service_provider_key_credentials:
-    value:
-      cert_pem: test-ssl-cert
-      private_key_pem: test-ssl-key
   .uaa.apps_manager_access_token_lifetime:
-    value: 3600
-  .uaa.apps_manager_refresh_token_lifetime:
     value: 3600
   .uaa.cf_cli_access_token_lifetime:
     value: 7200
@@ -299,90 +339,69 @@ product-properties:
     value: Email
   .uaa.proxy_ips_regex:
     value: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
-network-properties:
-  network:
-    name: test-ert-subnet
-  other_availability_zones:
-  - name: testzone-1
-  singleton_availability_zone:
-    name: testzone-1
+  .uaa.service_provider_key_credentials:
+    value:
+      cert_pem: test-ssl-cert
+      private_key_pem: test-ssl-key
 resource-config:
   backup_restore:
-    instances: automatic
     instance_type:
       id: automatic
-  blobstore:
     instances: automatic
     persistent_disk:
       size_mb: automatic
+  blobstore:
     instance_type:
       id: automatic
+    instances: automatic
+    persistent_disk:
+      size_mb: automatic
   compute:
-    instances: automatic
     instance_type:
       id: automatic
-  control:
     instances: automatic
-    instance_type:
-      id: 2xlarge.cpu
+  control:
     elb_names:
     - tcp:test-ssh-pool-name
+    instance_type:
+      id: 2xlarge.cpu
+    instances: automatic
   database:
+    instance_type:
+      id: automatic
     instances: automatic
     persistent_disk:
       size_mb: automatic
-    instance_type:
-      id: automatic
   ha_proxy:
-    instances: automatic
     instance_type:
       id: automatic
+    instances: automatic
+  istio_control:
+    instance_type:
+      id: automatic
+    instances: automatic
+  istio_router:
+    instance_type:
+      id: automatic
+    instances: automatic
   mysql_monitor:
-    instances: 0
     instance_type:
       id: automatic
-  router:
     instances: automatic
+  route_syncer:
     instance_type:
       id: automatic
+    instances: automatic
+  router:
     elb_names:
     - tcp:test-wss-pool-name
     - http:test-http-lb-name
-  tcp_router:
-    instances: automatic
     instance_type:
       id: automatic
+    instances: automatic
+  tcp_router:
     elb_names:
     - tcp:test-tcp-pool-name
-
-errand-config:
-  deploy-autoscaler:
-    post-deploy-state: default
-    pre-delete-state: default
-  deploy-notifications:
-    post-deploy-state: default
-    pre-delete-state: default
-  deploy-notifications-ui:
-    post-deploy-state: default
-    pre-delete-state: default
-  metric_registrar_smoke_test:
-    post-deploy-state: default
-    pre-delete-state: default
-  nfsbrokerpush:
-    post-deploy-state: default
-    pre-delete-state: default
-  push-apps-manager:
-    post-deploy-state: default
-    pre-delete-state: default
-  push-usage-service:
-    post-deploy-state: default
-    pre-delete-state: default
-  smbbrokerpush:
-    post-deploy-state: default
-    pre-delete-state: default
-  smoke_tests:
-    post-deploy-state: default
-    pre-delete-state: default
-  test-autoscaling:
-    post-deploy-state: default
-    pre-delete-state: default
+    instance_type:
+      id: automatic
+    instances: automatic
